--- a/src/template.html
+++ b/src/template.html
@@ -81,7 +81,7 @@
                     </ul>
                 </div>
             </div>
-            <footer>Developed by zaraku</footer>
+            <footer>Developed by renkode</footer>
         </div>
         <script src="main.js"></script>
     </body>
